compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/classPropertyInConstructor.fir.kt
// COMPARE_WITH_LIGHT_TREE

class C(<!CONFLICTING_JVM_DECLARATIONS!>val x: Int<!>) {
    <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>fun getX()<!> = 1<!>
}
